--- a/webui/src/main/resources/templates/react.html
+++ b/webui/src/main/resources/templates/react.html
@@ -3,6 +3,29 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>ReactJS + Spring Data REST</title>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+    <meta th:name="_csrf" th:content="${_csrf.token}"/>
+    <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
+
+    <link th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet"/>
+
+    <link th:src="@{/webjars/x-editable-bootstrap/1.5.1/css/bootstrap-editable.css}" rel="stylesheet"/>
+
+    <script th:src="@{/webjars/jquery/1.12.4/jquery.min.js}" type="text/javascript"></script>
+
+    <script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}" type="text/javascript"></script>
+
+    <script th:src="@{/webjars/x-editable-bootstrap/1.5.1/js/bootstrap-editable.min.js}"
+            type="text/javascript"></script>
+
+    <script th:src="@{/webjars/typeahead.js/0.11.1/dist/typeahead.bundle.min.js}" type="text/javascript"></script>
+
+    <link href="../static/st/my.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
