--- a/webui/src/main/resources/templates/react.html
+++ b/webui/src/main/resources/templates/react.html
@@ -25,8 +25,10 @@
 
     <script th:src="@{/webjars/typeahead.js/0.11.1/dist/typeahead.bundle.min.js}" type="text/javascript"></script>
 
-    <link href="/st/my.css" rel="stylesheet" type="text/css"/>
     <link href="/st/vis/vis.css" rel="stylesheet" type="text/css"/>
+    <link href="/st/react-datetime.css" rel="stylesheet" type="text/css"/>
+    <link href="/st/my.css" rel="stylesheet" type="text/css"/>
+
 </head>
 <body>
 
