Create basic dropdown list of src/dst ports.

--- a/webui/src/main/resources/templates/react.html
+++ b/webui/src/main/resources/templates/react.html
@@ -28,7 +28,7 @@
     <link href="/st/vis/vis.css" rel="stylesheet" type="text/css"/>
     <link href="/st/react-datetime.css" rel="stylesheet" type="text/css"/>
     <link href="/st/my.css" rel="stylesheet" type="text/css"/>
-
+    <link href="/st/react-dropdown.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
